# kn-fetch

./: .env.example  .gitignore  CONTRIBUTING.md  DIAGNOSIS_REPORT.md  GITNEXUS_CAPABILITIES.md  KNOWLEDGE_OUTPUT_GUIDE.md  OPTIMIZATION_PLAN.md  README.md  README_API_KEY_SETUP.md  advanced_syntax_model.json  analysis_report.json  analyze_call_structure.py  architecture_analysis.json  asset_scan_result.json  black.toml  check_all_fixes.py  comprehensive_analysis_report.json  comprehensive_asset_scan.json  debug_java_parser.py  debug_llm_config.py  debug_parser.py  debug_simple.py  diagnose_tree_sitter_api.py  documentation_templates.md  frontend_api_server.py  kn-fetch.py  knowledge_extraction.json  llm_prompts.json  project_structure_for_llm.json  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  run_extract.py  run_feedback_loop_demo.py  run_refactor.py  run_stock_datacenter.py  run_web_8001.py  start.bat  start_api_server.py  (+19 more)
.codebuddy/: MEMORY.md  constitution.md  mcp_settings.json  settings.json
.codebuddy/agents/: architect.md  developer.md  devops.md  reviewer.md  tester.md
config/: config.yaml  temp_stock_datacenter.yaml
demo/: demo_writing_modules.py
docs/: API_REFERENCE.md  CLI_COMMENT_GUIDE.md  DESIGN_CODE_ASSET_AGENT.md  DEVELOPMENT.md  DEVELOPMENT_STANDARDS.md  FINAL_PROJECT_REPORT.md  INTEGRATION_TEST_REPORT.md  KNOWLEDGE_EXTRACTION_EXECUTION_PLAN.md  KNOWLEDGE_EXTRACTION_OPTIMIZATION.md  LANGCHAIN_MIGRATION.md  PHASE1_PROGRESS_REPORT.md  PROJECT_COMPLETION_REPORT.md  README.md  STOCK_DATACENTER_TEST_REPORT.md  USER_GUIDE.md
docs/extract/: API.md  ARCHITECTURE.md  DESIGN_CODE_ASSET_AGENT.md  IMPLEMENTATION_PLAN_CODE_ASSET_AGENT.md  SYSTEM_OPTIMIZATION.md  design-v1.md  page-design-1.md  page-design.md
docs/frontend/: API_INTEGRATION_PLAN.md  App.tsx  INTEGRATION_TASKS.md  api-types.ts  frontend-design.md  index.html  main.tsx  package-lock.json  package.json  tsconfig.json
docs/refactor/: enhanced-report-design.md  feedback-loop-design.md  refactoring-agent-design.md  refactoring-design.md  task-list.md
generated_documents/: quick_architecture.md  quick_design.md  sample_architecture.md  sample_design.md
knfetch_env/: pyvenv.cfg
knfetch_env/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
llm_generated_documents/: api_reference.md  architecture_design.md  code_analysis_report.md  system_design.md  technical_summary.md
scripts/: README.md
scripts/analyze/: analyze_call_chains.py
scripts/check/: check_env.py  check_relationships.py
scripts/demo/: demo_phase3_phase4.py  demo_stock_analysis.py  run_stock_service_analysis.py
scripts/diagnose/: diagnose_java_analysis.py  diagnose_knowledge_extraction.py
scripts/tools/: install_and_run_gitnexus.py  regenerate_all_docs.py  regenerate_uml.py  view_relationships.py
scripts/verify/: verify_skill_format.py
src/agents/: __init__.py  base_agent.py  business_logic.py  code_parser.py  documentation.py  (+5 more)
tests/: README.md  __init__.py  conftest.py  run_integration_tests.py  test_app_architecture.py  test_app_basic.py  test_app_enhanced.py  test_app_knowledge.py  test_app_uml.py  test_config_manager.py  test_database_integration.py  test_stock_service_e2e.py
(+1361 files in other folders)
